2005-03-06  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: (Re-)enable compilation w/ 2.95.x.

2005-03-06  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in: Let CC variable take precedence over
	CROSS_COMPILE, replace --with-CC with --with-cc.

2005-03-05  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pipe.c (xnpipe_open): Clean USER_CONN bit when open
	fails.

2005-03-04  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_init_thread): Don't check the thread arg
	for NULL value; this can be caught using the simulator, and such
	test is way too limited to be efficient in the most annoying cases
	anyway (e.g. stray pointers).

2005-03-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/fusion.c (xnfusion_mount): Do not wreck the current
	fusion interface id. in case somebody tries to mount it twice.

	* nucleus/shadow.c (xnshadow_unmap): Check task pointer value
	earlier.

	* nucleus/thread.c (xnthread_init): Init the TCB so that its
	fields are set to known invalid values.

	* testsuite/klatency/latency-module.c (__latency_init): Rename the
	sampling thread to "ksampling" so that we can start both kernel
	and user-space latency tests concurrently.

2005-03-01  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10-i386-r9c5.
	
2005-02-24 Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* skin/rtai: Make C++ friendly.

2005-02-28  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in: Add e500 board specific option to "Architecture
	tuning flags", integrate these these flags in RTAI_USER_CFLAGS.

2005-02-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/calibration.h (__sched_latency): Reduce
	the calibrated jitter by a half for most configs.

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r6c14.

	* configure.in: Add back -fstrict-aliasing, but prevent warnings
	caused by Linux headers using -Wno-strict-aliasing.
